WV-2289: fix sidebar collapse btn size (#3920)

--- a/web/scss/features/sidebar-panel.scss
+++ b/web/scss/features/sidebar-panel.scss
@@ -96,9 +96,9 @@
     height: 48px;
     width: 45px;
 
-    svg {
-      height: 35px;
-      width: 35px;
+    svg.collapse-icon {
+      height: 40px;
+      width: 40px;
       color: #fff;
     }
   }
